--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
+    "url-loader": "^4.1.1",
     "vue-loader": "^17.0.1",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.14",
@@ -34,6 +37,9 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "copy-webpack-plugin": "^11.0.0",
+    "vue": "^3.2.47",
+    "vue-types": "^5.0.2",
+    "vuex": "^4.1.0"
   }
 }
